# wiki

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  nav.yml  pyproject.toml  sitemap.xml  wiki.code-workspace
.github/workflows/: ci.yml
about/profile/: index.html
docs/: index.md
docs/about/: profile.md
docs/notehub/modelops/: kserve_deploy.md  modelops_tech.md
docs/pynotes/: 01.hello_python.md  02.py_coding_standards.md  03.pypi_source_usage.md  04.env_package_selection.md  05.py_data_struct_summary.md
docs/pynotes/pylibs/: awesome_libs.md  pathlib.md
docs/tags/: index.md
docs/toolbox/devbox/: common_dev_tools_install.md  tools_software_dev_collection.md
docs/toolbox/plugins/: chrome_plugins.md  vscode_plugins.md
javascripts/: extra.js
notehub/modelops/kserve_deploy/: index.html
notehub/modelops/modelops_tech/: index.html
overrides/: 404.html  main.html  tags.html
overrides/partials/: footer.html  tag-cloud.html  tag-page-list.html
overrides/stylesheets/: customize.css  extra.css
pynotes/01.hello_python/: index.html
pynotes/02.py_coding_standards/: index.html
pynotes/03.pypi_source_usage/: index.html
pynotes/04.env_package_selection/: index.html
pynotes/05.py_data_struct_summary/: index.html
pynotes/pylibs/awesome_libs/: index.html
pynotes/pylibs/pathlib/: index.html
search/: search_index.json
stylesheets/: extra.css
tags/: index.html
toolbox/devbox/common_dev_tools_install/: index.html
toolbox/devbox/tools_software_dev_collection/: index.html
toolbox/plugins/chrome_plugins/: index.html
(+11 files in other folders)
