[project]
name = "wiki"
version = "1.0"
description = "AstonWang's Blog"
authors = [
    {name = "astonwang", email = "sswss5@aliyun.com"},
]
dependencies = [
    "mkdocs-material>=9.5.43",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
plugins = [
    "mkdocs-git-committers-plugin-2>=2.4.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "mkdocs serve -w nav.yml"